--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
     background: #efefef !important; /* slightly darker outer background */
   }
   .div-block-2{
-    background: inherit; /* keep your current page background */
+    background-color: #f7f3ee !important; /* inner page color */
     box-shadow: 0 10px 30px rgba(0,0,0,0.06);
     border-radius: 6px;
     overflow: hidden;
