--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
     --sage-body-2: #605A56;
 
     /* Muted greys (slightly darker for readability on real devices) */
-    --sage-muted: #B7B1AE;   /* was #C9C3C0 (too faint on some screens) */
+    --sage-muted: #6f6a64;   /* was #C9C3C0 (too faint on some screens) */
     --sage-helper: #726C69;
 
     --sage-button: #5E7A61;
@@ -593,7 +593,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
     :root{
       --sage-body: #625B58;
       --sage-body-2: #5E5754;
-      --sage-muted: #AFA9A6;
+      --sage-muted: #6f6a64;
     }
     .hero-subheading{ color: var(--sage-muted) !important; }
     .text-block-4,
