--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
 <style id="sage-color-fix">
   /* SAGE SPENCER palette overrides (keeps existing layout & Webflow structure) */
   :root{
-    --sage-bg: #FCF8F4;
+    --sage-bg: #e0d4be;
     --sage-divider: #EBE6E2;
     --sage-h1: #3C3534;
     --sage-h2: #504947;
