--- a/index.html
+++ b/index.html
@@ -602,128 +602,19 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
     }
   }
 </style>
-
-<style id="brevo-embed-head">
-  @font-face {
-    font-display: block;
-    font-family: Roboto;
-    src: url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/7529907e9eaf8ebb5220c5f9850e3811.woff2) format("woff2"),
-         url(https://assets.brevo.com/font/Roboto/Latin/normal/normal/25c678feafdc175a70922a116c9be3e7.woff) format("woff")
-  }
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 600;
-    src: url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/6e9caeeafb1f3491be3e32744bc30440.woff2) format("woff2"),
-         url(https://assets.brevo.com/font/Roboto/Latin/medium/normal/71501f0d8d5aa95960f6475d5487d4c2.woff) format("woff")
-  }
-  @font-face {
-    font-display: fallback;
-    font-family: Roboto;
-    font-weight: 700;
-    src: url(https://assets.brevo.com/font/Roboto/Latin/bold/normal/3ef7cf158f310cf752d5ad08cd0e7e60.woff2) format("woff2"),
-         url(https://assets.brevo.com/font/Roboto/Latin/bold/normal/ece3a1d82f18b60bcce0211725c476aa.woff) format("woff")
-  }
-  #sib-container input:-ms-input-placeholder {
-    text-align: left;
-    font-family: Helvetica, sans-serif;
-    color: #c0ccda;
-  }
-  #sib-container input::placeholder {
-    text-align: left;
-    font-family: Helvetica, sans-serif;
-    color: #c0ccda;
-  }
-  #sib-container textarea::placeholder {
-    text-align: left;
-    font-family: Helvetica, sans-serif;
-    color: #c0ccda;
-  }
-  #sib-container a {
-    text-decoration: underline;
-    color: #2BB2FC;
-  }
-</style>
-<link href="https://sibforms.com/forms/end-form/build/sib-styles.css" id="brevo-embed-css" rel="stylesheet"/>
 </head><body class="body"><div class="div-block-2"><div class="div-block"><div class="brand-text">SAGE SPENCER</div></div><div class="div-block-3"><h1 class="heading-2">Stay with Sage.<br/></h1><div class="hero-subheading">One private message. Delivered to you.</div><div class="form-wrap"><div class="form-block">
-<div class="sib-form" id="brevo-signup" style="text-align: center; background-color: #EFF2F7;">
-<div class="sib-form-container" id="sib-form-container">
-<div class="sib-form-message-panel" id="error-message" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;max-width:540px;">
-<div class="sib-form-message-panel__text sib-form-message-panel__text--center">
-<svg class="sib-icon sib-notification__icon" viewbox="0 0 512 512">
-<path d="M256 40c118.621 0 216 96.075 216 216 0 119.291-96.61 216-216 216-119.244 0-216-96.562-216-216 0-119.203 96.602-216 216-216m0-32C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm-11.49 120h22.979c6.823 0 12.274 5.682 11.99 12.5l-7 168c-.268 6.428-5.556 11.5-11.99 11.5h-8.979c-6.433 0-11.722-5.073-11.99-11.5l-7-168c-.283-6.818 5.167-12.5 11.99-12.5zM256 340c-15.464 0-28 12.536-28 28s12.536 28 28 28 28-12.536 28-28-12.536-28-28-28z"></path>
-</svg>
-<span class="sib-form-message-panel__inner-text">
-          Your connection could not be made. Please try again.
-        </span>
-</div>
-</div>
-<div></div>
-<div class="sib-form-message-panel" id="success-message" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#085229; background-color:#e7faf0; border-radius:3px; border-color:#13ce66;max-width:540px;">
-<div class="sib-form-message-panel__text sib-form-message-panel__text--center">
-<svg class="sib-icon sib-notification__icon" viewbox="0 0 512 512">
-<path d="M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 464c-118.664 0-216-96.055-216-216 0-118.663 96.055-216 216-216 118.664 0 216 96.055 216 216 0 118.663-96.055 216-216 216zm141.63-274.961L217.15 376.071c-4.705 4.667-12.303 4.637-16.97-.068l-85.878-86.572c-4.667-4.705-4.637-12.303.068-16.97l8.52-8.451c4.705-4.667 12.303-4.637 16.97.068l68.976 69.533 163.441-162.13c4.705-4.667 12.303-4.637 16.97.068l8.451 8.52c4.668 4.705 4.637 12.303-.068 16.97z"></path>
-</svg>
-<span class="sib-form-message-panel__inner-text">
-          You’re in, Welcome to SAGE.
-        </span>
-</div>
-</div>
-<div></div>
-<div class="sib-container--large sib-container--vertical" id="sib-container" style="text-align:center; background-color:rgba(255,255,255,1); max-width:540px; border-radius:3px; border-width:1px; border-color:#C0CCD9; border-style:solid; direction:ltr">
-<form action="https://7fe88f09.sibforms.com/serve/MUIFAIo2VwB9nKUyKmAPsWhBiVtLjRvOhO7iw0O3SQHJ0dRXDZep4EUftS7WaeqMIwiB8uTBqB0tJ_s9COlvTqDIR7iRqHtEG7oBF9G3eHkpiHKgitqk-ZfqNgBNX7QfHpL5AQ6CWBqI6Xag45r86NY1tIE__kqzrg7YuFte-mIH3dlCxrDS1UW0w9gual7B2cUuyXVAzbEdxZah8w==" data-type="subscription" id="sib-form" method="POST">
-<div style="padding: 8px 0;">
-<div class="sib-input sib-form-block">
-<div class="form__entry entry_block">
-<div class="form__label-row">
-<div class="entry__field">
-<input autocomplete="off" class="input" data-required="true" id="EMAIL" name="EMAIL" placeholder="EMAIL" required="" type="text"/>
-</div>
-</div>
-<label class="entry__error entry__error--primary" style="font-size:16px; text-align:left; font-family:Helvetica, sans-serif; color:#661d1d; background-color:#ffeded; border-radius:3px; border-color:#ff4949;"></label>
-</div>
-</div>
-</div>
-<div style="padding: 8px 0;">
-<div class="sib-form-block" style="text-align: center">
-<button class="sib-form-block__button sib-form-block__button-with-loader" form="sib-form" style="font-size:16px; text-align:center; font-weight:700; font-family:Helvetica, sans-serif; color:#FFFFFF; background-color:#3E4857; border-radius:15px; border-width:0px;" type="submit">
-<svg class="icon clickable__icon progress-indicator__icon sib-hide-loader-icon" style="" viewbox="0 0 512 512">
-<path d="M460.116 373.846l-20.823-12.022c-5.541-3.199-7.54-10.159-4.663-15.874 30.137-59.886 28.343-131.652-5.386-189.946-33.641-58.394-94.896-95.833-161.827-99.676C261.028 55.961 256 50.751 256 44.352V20.309c0-6.904 5.808-12.337 12.703-11.982 83.556 4.306 160.163 50.864 202.11 123.677 42.063 72.696 44.079 162.316 6.031 236.832-3.14 6.148-10.75 8.461-16.728 5.01z"></path>
-</svg>
-              SUBSCRIBE
-            </button>
-</div>
-</div>
-<input class="input--hidden" name="email_address_check" type="text" value=""/>
+<form action="https://7fe88f09.sibforms.com/serve/MUIFAIo2VwB9nKUyKmAPsWhBiVtLjRvOhO7iw0O3SQHJ0dRXDZep4EUftS7WaeqMIwiB8uTBqB0tJ_s9COlvTqDIR7iRqHtEG7oBF9G3eHkpiHKgitqk-ZfqNgBNX7QfHpL5AQ6CWBqI6Xag45r86NY1tIE__kqzrg7YuFte-mIH3dlCxrDS1UW0w9gual7B2cUuyXVAzbEdxZah8w==" aria-label="Email Opt-in" class="form-2" id="brevo-form-top" method="POST">
+<input class="text-field-2 w-input" id="EMAIL_TOP" maxlength="256" name="EMAIL" placeholder="Enter your email..." required="" type="email"/>
+<input class="input--hidden" name="email_address_check" style="display:none !important" type="text" value=""/>
 <input name="locale" type="hidden" value="en"/>
+<input class="submit-button-2 w-button" type="submit" value="Let Sage write to me"/>
 </form>
-</div>
-</div>
-</div>
 </div></div></div><div class="div-block-5"><div class="div-block-4"></div></div><div class="reflection-wrap"><div class="text-block-4">You didn’t come here by accident.<br/>Maybe something Sage said stayed with you.<br/>Maybe you didn’t want the voice to end.<br/>Maybe you’re ready for a quieter, clearer way forward.<br/>This space exists to continue what began on YouTube, without distraction.</div></div><div class="div-block-4"></div><div class="receive-wrap"><h2 class="heading-3">What You’ll Receive<br/></h2><ul class="list" role="list"><li class="list-item">Words to steady your mind.</li><li class="list-item-2">Guidance to sharpen your focus.</li><li class="list-item-3">Reminders of who you’re becoming.</li><li class="list-item-4">Perspective when things feel heavy.</li><li class="list-item-5">Quiet strength, delivered gently.</li></ul><div class="text-block-7">One message at a time.</div></div><div class="div-block-4"></div><div class="div-block-6"><h2 class="heading-5">This is not a newsletter.</h2><div class="text-block-12">There are no updates. No promotions.<br/>No pressure. <br/>I write only when there’s something worth saying.<br/>‍</div></div><div class="div-block-7"></div><div class="div-block-8"><div class="text-block-14">I won’t flood your inbox.<br/>I won’t waste your time.<br/>When I write, it will be meant for you.</div><div class="text-block-15">— Sage</div><div class="div-block-9"></div></div><section class="section-3"><div class="form-block">
-<div style="text-align:center;">
-<a class="submit-button-2 w-button" href="#brevo-signup" style="display:inline-block; text-decoration:none;">
-          Join here
-        </a>
-<div class="text-block-2" style="margin-top:10px;">You’re not late. You’re right on time.</div>
-</div>
+<form action="https://7fe88f09.sibforms.com/serve/MUIFAIo2VwB9nKUyKmAPsWhBiVtLjRvOhO7iw0O3SQHJ0dRXDZep4EUftS7WaeqMIwiB8uTBqB0tJ_s9COlvTqDIR7iRqHtEG7oBF9G3eHkpiHKgitqk-ZfqNgBNX7QfHpL5AQ6CWBqI6Xag45r86NY1tIE__kqzrg7YuFte-mIH3dlCxrDS1UW0w9gual7B2cUuyXVAzbEdxZah8w==" aria-label="Email Opt-in" class="form-2" id="brevo-form-bottom" method="POST">
+<input class="text-field-2 w-input" id="EMAIL_BOTTOM" maxlength="256" name="EMAIL" placeholder="Enter your email..." required="" type="email"/>
+<input class="input--hidden" name="email_address_check" style="display:none !important" type="text" value=""/>
+<input name="locale" type="hidden" value="en"/>
+<input class="submit-button-2 w-button" type="submit" value="Let Sage write to me"/>
+</form>
 </div><div class="div-block-10"></div><div class="text-block-16">SAGE SPENCER</div><div class="text-block-17">Whispering strength into your life</div></section><div class="div-block-11"><div class="div-block-12"><div class="text-block-18">Privacy Policy · Terms</div><div class="text-block-19">Written with care. Sent with intention.</div><div class="text-block-20">© Sage Spencer. All rights reserved.</div></div></div><section class="section-2"></section></div><script crossorigin="anonymous" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" src="./index_files/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript"></script><script src="./index_files/webflow.a0aa6ca1.0aa5f4cf033f7a67.js" type="text/javascript"></script>
-
-<script id="brevo-embed-footer">
-  window.REQUIRED_CODE_ERROR_MESSAGE = 'Please choose a country code';
-  window.LOCALE = 'en';
-  window.EMAIL_INVALID_MESSAGE = window.SMS_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-  window.REQUIRED_ERROR_MESSAGE = "This field cannot be left blank. ";
-  window.GENERIC_INVALID_MESSAGE = "The information provided is invalid. Please review the field format and try again.";
-  window.translation = {
-    common: {
-      selectedList: '{quantity} list selected',
-      selectedLists: '{quantity} lists selected',
-      selectedOption: '{quantity} selected',
-      selectedOptions: '{quantity} selected',
-    }
-  };
-  var AUTOHIDE = Boolean(0);
-</script>
-<script defer="" id="brevo-embed-mainjs" src="https://sibforms.com/forms/end-form/build/main.js"></script>
 </body></html>
