--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Sage Spencer — 21-Day Email Journey</title>
-  <meta name="description" content="Build your dream life — one day at a time. A 21-day email journey with Sage: LOA mindset + small daily actions. 100% free." />
+  <meta name="description" content="Build Your Dream Life — One Day At a Time. A 21-day email journey with Sage: LOA mindset + small daily actions. 100% free." />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
